Define base styles, fonts and color palette

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Equalizer Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores expedita
+    aspernatur fuga. Molestiae dolore, ullam tenetur nesciunt iusto id est!
+  </body>
 </html>
