Build Header section

--- a/index.html
+++ b/index.html
@@ -7,24 +7,14 @@
     <title>Equalizer Landing Page</title>
   </head>
   <body>
-    <h1>Heading 1 test here!!</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores expedita
-      aspernatur fuga. Molestiae dolore, ullam tenetur nesciunt iusto id est!
-    </p>
-    <h2>Heading 2 test here!!</h2>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores commodi,
-      debitis fugiat error maiores consectetur non ratione aliquid, excepturi
-      nam, quo quod. Dolorum veritatis tempora, ad assumenda velit minus et quos
-      neque dolore dolor a iure in itaque mollitia tenetur eum perferendis. Ipsa
-      nihil, dicta sint ratione explicabo quasi libero recusandae, doloremque
-      sequi amet eaque optio, iure repellat beatae velit quae ab! Molestiae
-      reiciendis assumenda molestias quaerat, suscipit veritatis qui magnam
-      voluptatibus aliquam. Natus architecto aut iure ipsam neque animi vel
-      voluptas, iusto, quos magnam nihil quo repellendus eaque impedit
-      distinctio, incidunt eius ullam autem dolore nemo consequuntur? Nulla,
-      repellendus?
-    </p>
+    <header class="header wrapper">
+      <img
+        src="assets/images/logo.svg"
+        alt="equalizer logo"
+        class="header__logo"
+      />
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
