Edit: Wrapper and header section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Equalizer Landing Page</title>
   </head>
   <body>
-    <header class="header wrapper">
+    <header class="header wrapper header__wrapper">
       <img
         src="assets/images/logo.svg"
         alt="equalizer logo"
