Make hero section responsive to tablets

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <section class="hero">
       <div class="hero__text wrapper">
-        <h1>We make your music sound extraordinary</h1>
-        <p>
+        <h1 class="hero__title">We make your music sound extraordinary</h1>
+        <p class="hero__about">
           A system audio equalizer specifically designed for Android and iOS.
           Freely tune the way your music sounds with a professional grade
           parametric EQ & volume mixer. Control bass, mids, treble gain control,
