--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Equalizer Landing Page</title>
   </head>
-  <body>
+  <body class="bg">
     <header class="header wrapper">
       <img
         src="assets/images/logo.svg"
